--- a/WebHookServer/Web.config
+++ b/WebHookServer/Web.config
@@ -10,9 +10,14 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebHookServer-20170320011347.mdf;Initial Catalog=aspnet-WebHookServer-20170320011347;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    
+<!--
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=WebHooks-Demo;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="MS_SqlStoreConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=WebHooks-Demo;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MS_SqlStoreConnectionString" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=WebHooks-Demo;Integrated Security=True" providerName="System.Data.SqlClient" />
+-->
+    <add name="DefaultConnection" connectionString="Server=tcp:webhooksdem.database.windows.net,1433;Initial Catalog=WebHooks;Persist Security Info=False;User ID=webhooks;Password=P@ssw0rd!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="MS_SqlStoreConnectionString" connectionString="Server=tcp:webhooksdem.database.windows.net,1433;Initial Catalog=WebHooks;Persist Security Info=False;User ID=webhooks;Password=P@ssw0rd!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+
+
 
   </connectionStrings>
   <appSettings>
