--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/WebHookServer/Properties/PublishProfiles/WebHookServer - Web Deploy.pubxml
